INTYGFV-16783: Refactor IntygIntegrationController and remove legacy code